<resources>
    <string name="app_name">NGA客户端</string>
    <string name="menu_login">登录</string>
    <string name="menu_setting">设置</string>
    <string name="menu_exit">退出</string>
    <string name="username">用户名</string>
    <string name="dbusername">豆瓣妹子用户邮箱</string>
    <string name="dblogin_state">豆瓣妹子登录状态</string>
    <string name="login_user_hint">输入邮箱或者NGA昵称</string>
    <string name="db_login_user_hint">输入豆瓣妹子网站的邮箱账号</string>
    <string name="password">密码</string>
    <string name="authcode">验证码</string>
    <string name="authcodewithmaohao">验证码:</string>
    <string name="login">登录</string>
    <string name="submit">提交</string>
    <string name="selectpic">选择图片</string>
    <string name="login_successfully">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="not_to_send_to_self">不要给自己发短消息,你有不精分对不,万一你是,去短消息界面发吧</string>
    <string name="title">(这里填可以引喷的标题)</string>
    <string name="avataraddtitle">(这里填炫酷的头像URL地址)</string>
    <string name="messageto">(这里填ID/用户名,多人用逗号分隔)</string>
    <string name="titlecannull">(这里可以不填引喷的标题)</string>
    <string name="replycontent">(这里填可以引喷的内容)</string>
    <string name="changesignhint">(这里填你喜欢的签名内容)</string>
    <string name="commit">提交</string>
    <string name="cancel">取消</string>
    <string name="drawer_open">打开侧边栏</string>
    <string name="drawer_close">关闭侧边栏</string>
    <string name="largesttablenum">7</string>
    <string name="nowifi_downimg">载入帖子图片</string>
    <string name="video_layout_loading">正在缓冲&#8230;</string>
    <string name="nightmode">夜间模式</string>
    <string name="daymode">日间模式</string>
    <string name="menu_title_open_with_preload_browser">使用内置浏览器打开</string>
    <string name="menu_title_open_with_browser">使用外置浏览器打开</string>
    <string name="iconmode">使用原版板块图标</string>
    <string name="refresh">刷新</string>
    <string name="back">返回</string>
    <string name="new_thread">发帖</string>
    <string name="new_message">发新消息</string>
    <string name="reply_message">回短消息</string>
    <string name="reply_thread">回帖</string>
    <string name="bookmark">收藏本帖</string>
    <string name="bookmark_title">已收藏的主题</string>
    <string name="goto_bookmark">收藏夹</string>
    <string name="text_size">帖子列表字体大小</string>
    <string name="lock_orientation">锁定</string>
    <string name="unlock_orientation">自动</string>
    <string name="thread_load_error">可能遇到了一个广告或者帖子被删除</string>
    <string name="notification_on">启用被喷提示</string>
    <string name="notification_sound">提示声音</string>
    <string name="download_avatar_nowifi">载入头像(慎用)</string>
    <string name="upload">上传</string>
    <string name="avoidWindfury">防止风怒机制</string>
    <string name="avatar">头像</string>
    <string name="network_error">网络错误</string>
    <string name="datafromserver_error">服务器返回数据错误</string>
    <string name="book_mark_successfully">收藏成功</string>
    <string name="already_bookmarked">链接已经在收藏夹里了</string>
    <string name="avatar_size">头像大小</string>
    <string name="emotion_size">表情大小</string>
    <string name="clear_recent_board">清除最近访问列表</string>
    <string name="showAnimation">显示动画</string>
    <string name="modify_thread">编辑帖子</string>
    <string name="showSignature">显示签名</string>
    <string name="goto_floor">跳页</string>
    <string name="goto_floor_description">上下拨动或手动输入</string>
    <string name="use_view_cache">启用楼层缓存</string>
    <string name="view_cache_tips">开启楼层缓存可以防止楼层滚动的时候遇到长帖子时跳动的问题，但是会占用更多的内存，如果体验不佳，请关闭这个选项</string>
    <string name="myscheme">ngacn</string>
    <string name="myhost">nga.178.com</string>
    <string name="post_comment">贴条</string>
    <string name="quote_subject">喷之</string>
    <string name="copy_to_clipboard">复制</string>
    <string name="signature_dialog">查看签名</string>
    <string name="vote_dialog">投票/投注</string>
    <string name="showprofile">查看用户信息</string>
    <string name="ban_thisone">屏蔽此人</string>
    <string name="cancel_ban_thisone">取消屏蔽此人</string>
    <string name="avatar_dialog">查看头像</string>
    <string name="show_this_person_only">只看此人</string>
    <string name="edit">编辑</string>
    <string name="show_whole_thread">显示全部</string>
    <string name="search_post">搜索回复</string>
    <string name="search_subject">搜索发帖</string>
    <string name="send_message">发短消息</string>
    <string name="avatar_description">头像</string>
    <string name="search_hint">输入要搜索的内容/用户名</string>
    <string name="profile_search_hint">输入要查看的用户名或ID</string>
    <string name="supertext_hint">输入内容并选择论坛代码</string>
    <string name="copy_hint">复制需要的内容</string>
    <string name="click_to_delete">点击删除</string>
    <string name="save">保存</string>
    <string name="image_saved">图片已经保存在</string>
    <string name="invalid_url">链接不合法</string>
    <string name="mkdir_fail">无法创建目录，sd卡未挂载？</string>
    <string name="select_category">点击选择类别</string>
    <string name="group_search">搜索</string>
    <string name="share">分享到…</string>
    <string name="image_to_big">图片超过1M，自动缩小</string>
    <string name="image_to_big2">图片宽高超过180*255分辨率，自动缩小</string>
    <string name="page">页</string>
    <string name="search">搜索</string>
    <string name="menu_nearby_user">yooooo</string>
    <string name="add_fid">添加版面</string>
    <string name="add_fid_id">添加版面ID</string>
    <string name="nearby_no_login">没登录不能yoooo</string>
    <string name="fail_to_locate">无法定位</string>
    <string name="nearby_no_user">附近没有其他用户</string>
    <string name="upload_location">发帖报告我的位置</string>
    <string name="find_nearby_alert_string">你在查看附近的用户时也会泄露自己的位置，请确认是否继续</string>
    <string name="change_icon_string">切换板块图标将清除最近访问内容，请确认是否继续</string>
    <string name="alert_vote">来自投票/投注页面的消息</string>
    <string name="confirm_vote">来自投票/投注页面的确认消息</string>
    <string name="change_nigmtmode_string_message">切换界面模式将重新加载短消息列表和正文，请确认是否继续</string>
    <string name="change_nigmtmode_string_refresh">切换界面模式将刷新，请确认是否继续</string>
    <string name="seeingooglemaporprofile">请选择查看论坛用户信息或在Google Map中查看位置</string>
    <string name="nearbyingooglemaps">在Google Map中查看位置</string>
    <string name="nearbyinprofile">查看论坛用户信息</string>
    <string name="warn">警告</string>
    <string name="warnnearby">请选择打开方式</string>
    <string name="set_upload_location_alert">位置是非常重要的隐私信息，公布后你很可能被骚扰，人肉，抢劫，强奸,请确认是否打开</string>
    <string name="location_service_disabled">好像没开定位服务</string>
    <string name="get_location_success">获取位置成功</string>
    <string name="locating">正在获取位置</string>
    <string name="fuck_gfw_prefix">方滨兴造墙烂屁眼</string>
    <string name="fail_to_cross_gfw">又被墙了,草</string>
    <string name="close">关闭</string>
    <string name="change_night_mode">夜间模式</string>
    <string name="change_daily_mode">白天模式</string>
    <string name="floor_one">1楼</string>
    <string name="sample_post_date">11:11:11</string>
    <string name="sample_nick_name">骷髅党</string>
    <string name="sample_user_level">级别:骷髅党</string>
    <string name="split">菜单按钮在下面(4.0以上)</string>
    <string name="replysplit">发帖按钮在下面(4.0以上)</string>
    <string name="ha">硬件加速(4.0以上)</string>
    <string name="fullscreenmode">全屏模式</string>
    <string name="kitwebview">列表卡顿修复(测试)</string>
    <string name="kitwebviewinfo">如果你的手机在主题帖中不卡顿,请不要启用本功能!</string>
    <string name="addreplybutton">主题页面显示回复按钮</string>
    <string name="report">举报</string>
    <string name="reportdialog_description">不要仅仅因为意见不同而举报</string>
    <string name="report_confirm">举报确认</string>
    <string name="emotion">表情</string>
    <string name="cannot_eidt_comment">不能编辑贴条</string>
    <string name="cannot_add_to_blacklist_cause_logout">你没登录,不能拉黑</string>
    <string name="cannot_add_to_blacklist_cause_anony">这傻逼匿名了,不能拉黑</string>
    <string name="remove_from_blacklist_success">解除屏蔽成功</string>
    <string name="add_to_blacklist_success">添加屏蔽成功</string>
    <string name="websize_sample_text">帖子内字体大小</string>
    <string name="prompt">提示</string>
    <string name="promptnewversion">提示(花几秒看完它)</string>
    <string name="i_know">知道了</string>
    <string name="start_title">NGA客户端开源版</string>
    <string name="create_cache_dir">创建缓存目录</string>
    <string name="move_avatar">移动头像到新位置</string>
    <string name="error">错误</string>
    <string name="recent">最近访问</string>
    <string name="addfid">用户自定义</string>
    <string name="addfid_title_hint">输入版面名称及ID添加版面</string>
    <string name="urlto_title_hint">输入或粘贴URL地址</string>
    <string name="floor_error">无法确定楼层，选择0楼</string>
    <string name="unknow_error">客户端发生未知错误</string>
    <string name="copied_to_clipboard">已经复制到剪切板</string>
    <string name="search_dialog_hint">强撸灰飞烟灭</string>
    <string name="profile_search_dialog_hint">默认查看自己的用户信息</string>
    <string name="addfid_dialog_hintA">输入版面名称</string>
    <string name="addfid_dialog_url">输入URL地址(板块或帖子)</string>
    <string name="addfid_dialog_hintB">输入版面ID(fid)(个人版面有负号)</string>
    <string name="add_stid_dialog_hintB">输入合集ID(stid)</string>
    <string name="search_dialog_hint_topic_reply_byself">直接按确定搜索自己的发帖</string>
    <string name="search_dialog_hint_reply_byself">直接按确定搜索自己的回复</string>
    <string name="user_distance">该用户距离你</string>
    <string name="meter">米</string>
    <string name="kilo_meter">公里</string>
    <string name="hide">隐藏</string>
    <string name="blacklistban">屏蔽</string>
    <string name="legend">传说</string>
    <string name="attachment">附件</string>
    <string name="comment">评论</string>
    <string name="sig">签名</string>
    <string name="delete">删除</string>
    <string name="delete_all">删除全部</string>
    <string name="refresh_after_post_setting_mode">回帖后刷新内容</string>
    <string name="search_topic">板块</string>
    <string name="search_alltopic">全站</string>
    <string name="search_user_topic">发帖</string>
    <string name="search_user_apply">回复</string>
    <string name="atsomeone">[@用户名]</string>
    <string name="urladd">[url]</string>
    <string name="quoteadd">[quote]</string>
    <string name="wenzichuli">字体美化</string>
    <string name="bold">加粗</string>
    <string name="withcontent">包括正文</string>
    <string name="italic">斜体</string>
    <string name="underline">下划线</string>
    <string name="fontcolor">颜色</string>
    <string name="fontsize">字号</string>
    <string name="delline">删除线</string>
    <string name="setting_title_swipe_back">侧滑返回</string>
    <string name="setting_title_size">调整字体和头像大小</string>
    <string name="setting_title_material_theme">主题风格</string>
    <string name="setting_title_bottom_tab">主题页面显示底部标签页</string>
    <string name="setting_title_left_hand">左手模式</string>
    <string name="setting_title_hardware_accelerated">硬件加速</string>
    <string name="setting_summary_hardware_accelerated">主题详情页面闪退可尝试关闭此项</string>
    <string name="setting_title_sort_by_post">按发帖顺序排序</string>
    <string name="setting_title_user">用户管理</string>
    <string name="setting_title_black_list">黑名单</string>
    <string name="setting_title_filter_sub_board">过滤版主固定的渣帖子</string>
    <string name="setting_nga_domain">NGA域名</string>
    <string name="setting_avatar_network_title">载入头像</string>
    <string name="setting_avatar_network_summary">移动数据网络下载入头像</string>
    <string name="setting_image_network_title">载入帖子图片</string>
    <string name="setting_image_network_summary">移动数据网络下载入帖子图片</string>
    <string name="setting_post_color_text_title">彩虹模式发帖</string>
    <string name="setting_post_color_text_summary">慎用，有被禁言的风险！</string>
    <string name="setting_solid_color_bg_title">使用纯色背景</string>
    <string name="setting_solid_color_bg_summary">主题列表和主题详情页面使用纯色背景</string>
    <string name="filter_keywords">关键字屏蔽</string>
    <string name="twenty_four">24小时热帖</string>
    <string name="menu_add_bookmark_board">添加至我的收藏</string>
    <string name="menu_remove_bookmark_board">取消收藏</string>
    <string name="menu_search">搜索</string>
    <string name="menu_recommend">精华区</string>
    <string name="menu_sub_board">子板块</string>
    <string name="menu_bookmark_post">收藏夹</string>
    <string name="menu_history">浏览历史</string>
    <string name="menu_copy_url">复制链接</string>
    <string name="dislike">踩</string>
</resources>