<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_post_comment"
        android:icon="@drawable/ic_menu_start_conversation"
        android:title="@string/post_comment" />

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/icon_menu_eraser"
        android:title="@string/edit" />
    <item
        android:id="@+id/menu_like"
        android:icon="@drawable/ic_menu_thumbs_up"
        android:title="@string/like" />

    <item
        android:id="@+id/menu_dislike"
        android:icon="@drawable/ic_menu_thumbs_down"
        android:title="@string/dislike" />

    <item
        android:id="@+id/menu_report"
        android:title="@string/report" />
    <item
        android:id="@+id/menu_signature"
        android:title="@string/signature_dialog" />
    <item
        android:id="@+id/menu_vote"
        android:title="@string/vote_dialog" />
    <item
        android:id="@+id/menu_show_this_person_only"
        android:title="@string/show_this_person_only" />
    <item
        android:id="@+id/menu_ban_this_one"
        android:title="@string/ban_thisone" />

</menu>