<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:androidnga="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_add_bookmark"
        android:icon="@drawable/btn_ic_star_off"
        android:title="@string/menu_add_bookmark_board"
        android:visible="false"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_remove_bookmark"
        android:icon="@drawable/btn_ic_star_on"
        android:title="@string/menu_remove_bookmark_board"
        android:visible="false"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/btn_ic_search"
        android:title="@string/menu_search"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_twenty_four"
        android:icon="@drawable/btn_ic_search"
        android:title="@string/twenty_four"
        androidnga:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/btn_ic_search"
        android:title="@string/menu_history"
        androidnga:showAsAction="never"/>

    <item
        android:id="@+id/menu_recommend"
        android:icon="@drawable/btn_ic_search"
        android:title="@string/menu_recommend"
        androidnga:showAsAction="never" />

    <item
        android:id="@+id/menu_sub_board"
        android:icon="@drawable/btn_ic_search"
        android:title="@string/menu_sub_board"
        androidnga:showAsAction="never" />

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/btn_ic_collections"
        android:title="@string/menu_bookmark_post"
        androidnga:showAsAction="never" />


</menu>
