<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:androidnga="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_goto_floor"
        android:title="@string/goto_floor"
        androidnga:showAsAction="never"/>

    <item
        android:id="@+id/menu_copy_url"
        android:title="@string/menu_copy_url"
        androidnga:showAsAction="never"/>

    <item
        android:id="@+id/menu_add_bookmark"
        android:icon="@drawable/btn_ic_star_on"
        android:title="@string/bookmark"
        androidnga:showAsAction="never"/>

    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/btn_ic_star_on"
        android:title="缓存本页"
        androidnga:showAsAction="never"/>

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/btn_ic_share"
        android:title="@string/share"
        androidnga:showAsAction="never"/>

    <item
        android:id="@+id/menu_nightmode"
        android:icon="@drawable/btn_ic_star_on"
        android:title="@string/nightmode"
        android:visible="false"
        androidnga:showAsAction="never" />

    <item
        android:id="@+id/menu_daymode"
        android:icon="@drawable/btn_ic_star_on"
        android:title="@string/daymode"
        android:visible="false"
        androidnga:showAsAction="never" />

    <item
        android:id="@+id/menu_open_by_browser"
        android:icon="@drawable/btn_ic_star_on"
        android:title="@string/menu_title_open_with_preload_browser"
        androidnga:showAsAction="never" />

</menu>