<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingEnd="16dp"
    android:paddingStart="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/search_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:hint="@string/search_dialog_hint"
            android:imeOptions="actionSearch"
            android:inputType="textNoSuggestions" />

        <CheckBox
            android:id="@+id/withcontent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="5dp"
            android:checked="false"
            android:text="@string/withcontent"
            android:textStyle="bold" />


    </LinearLayout>


    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="搜索目的"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/search_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/search_topic" />

        <RadioButton
            android:id="@+id/search_alltopic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_alltopic" />

        <RadioButton
            android:id="@+id/search_user_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_user_topic" />

        <RadioButton
            android:id="@+id/search_user_apply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search_user_apply" />

    </RadioGroup>


</LinearLayout>