<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/inputsupertext_dataa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/search_dialog_hint" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/atsomeone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/atsomeone" />

            <RadioButton
                android:id="@+id/quoteadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/quoteadd" />

            <RadioButton
                android:id="@+id/urladd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/urladd" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wenzichuli"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wenzichuli"
                android:textSize="18dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/bold"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/underline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@+id/italic"
                    android:text="@string/underline" />

                <CheckBox
                    android:id="@+id/italic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@+id/bold"
                    android:text="@string/italic"
                    android:textStyle="italic" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/fontcolor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/fontcolor"
                    android:textColor="#007FFF" />

                <CheckBox
                    android:id="@+id/fontsize"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@+id/fontcolor"
                    android:text="@string/fontsize" />

                <CheckBox
                    android:id="@+id/delline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="32dp"
                    android:layout_toRightOf="@+id/fontsize"
                    android:text="@string/delline" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fontsize"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/fontsize_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/font_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fontcolor"
            android:visibility="gone" />

        <Spinner
            android:id="@+id/font_color_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>