<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
    android:paddingStart="?android:attr/listPreferredItemPaddingStart">

    <EditText
        android:id="@+id/addfid_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/addfid_dialog_hintA"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:selectAllOnFocus="true">

        <requestFocus/>

    </EditText>


    <EditText
        android:id="@+id/addfid_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/addfid_dialog_hintB"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:selectAllOnFocus="true"/>

    <EditText
        android:id="@+id/add_stid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_stid_dialog_hintB"
        android:maxLines="6"
        android:scrollbars="vertical"
        android:selectAllOnFocus="true"/>

</LinearLayout>
   