<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
             android:orientation="vertical">

    <TableRow
        android:id="@+id/panel_recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="收信人"/>

        <EditText
            android:id="@+id/et_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/messageto"
            android:inputType="textNoSuggestions"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="标题"/>


        <EditText
            android:id="@+id/et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/title"
            android:inputType="textNoSuggestions"
            android:maxLines="1"/>

    </TableRow>

    <EditText
        android:id="@+id/et_body"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1"
        android:background="@null"
        android:gravity="top|left"
        android:hint="@string/replycontent"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine|textNoSuggestions"
        android:layerType="software"
        android:scrollbars="vertical">

        <requestFocus/>
    </EditText>


</TableLayout>